--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -9,16 +9,18 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET Framwork
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.101
+        dotnet-version: 3.1.101    
     - name: Install dependencies
       run: dotnet restore
+    - name: Build with dotnet
+      run: dotnet build --configuration Release CoreWebApplication1/Pokemon.sln
     - name: Build
       run: dotnet build --configuration Release --no-restore
     - name: Test
